# CMakeTemplate

./: .gitignore  CMakeLists.txt  main.cc
app/: CMakeLists.txt  main.cc
src/my_lib/: CMakeLists.txt  my_lib.cc
tests/: CMakeLists.txt  main.cc
